# SudokuSolver

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  Sudoku.hpp  main.cpp
data/: master.txt  subsets-hidden.txt  x-wing.txt
include/: Indices.hpp  Sudoku.hpp  SudokuPuzzle.hpp  indices.hpp
include/public/: Sudoku.hpp
libsudoku/: CMakeLists.txt  config.h  sudoku.c  sudoku.h
old/include/private/: Indices.hpp
old/include/public/: Sudoku.hpp
old/src/: check.cpp  initialize_candidates.cpp  locked_claiming.cpp  locked_pointing.cpp  print.cpp  subsets_naked.cpp
old/test/: CMakeLists.txt
src/: check.cpp  initialize_candidates.cpp  locked_claiming.cpp  locked_pointing.cpp  main.cpp  print.cpp  singles.cpp  solve.cpp  subsets_hidden.cpp  subsets_naked.cpp  x-wing.cpp
sudoku/: CMakeLists.txt  main.c
test/: .clang-tidy  CMakeLists.txt  test.cxx  test_sudoku_puzzle.cxx
test/data/: README.md  naked-subsets.txt  tmp.txt
test/include/: test_helpers.hxx
test/src/: 50k.cxx  techniques.cxx
